2010-02-03 Niall Power - <niall.power@sun.com>

	* var/svc/manifest/application/time-slider.xml:
	  Define new property "zfs/sep". Taken for zfs-auto-snapshot,
	  allows custom definition of a separator character for snapshot
	  datestamps that can work on filesystems that previously choked
	  on the ":" characted such as CIFS, PCFS.
	* usr/share/time-slider/lib/time_slider/smfmanager.py: Added new
	  method to get zfs/sep property.
	* usr/share/time-slider/lib/time_slider/timesliderd.py: modify
	  snapshot creation and listing operations to use the new zfs/sep
	  property, while maintaining compatibility with old snapshot
	  datestamps that used the ":" character.

2010-02-02 Niall Power - <niall.power@sun.com>

	* usr/share/time-slider/lib/time_slider/plugin.py:
	  Fix invalid function call "debug()" should be "util.debug()" when
	  reporting disabled plugin in PluginManager.refresh()
	  Missing "()" in method call Plugin.is_running() in Plugin.refresh()

2010-01-26 Niall Power - <niall.power@sun.com>

	* VERSION: bump to 0.2.96
	* Use explicit path: "/usr/bin/python2.6" to reference python interpreter
	  instead of relying on "/usr/bin/env" to find it.
	* Add plugin framework to enable user defined plugins to be executed after
	  snapshots get taken by time-sliderd. Plugins are based on the SMF service
	  framework and plugins are defined as instances of the base SMV service:
	  svc:/application/time-slider/plugin
	* Provide a "zfs-send" plugin as a replacement for the zfs-auto-snapshot
	  provided "backup-save-cmd" property.
	* Add util.py to define two commoonly used utility functions: debug/logging
	  and command spawning. Reduces lines of code and duplication.
	* Refactor all python files to use util.run_command() convenience function
	  where possible.
	* Fix a bug where time-sliderd emits warnings and tries to cleanup pools
	  upon which it creates no snapshots. Also make time-sliderd more descriminating